Update .po files

--- a/l10n/po/ja_JP/_includes/header-navigation.html.po
+++ b/l10n/po/ja_JP/_includes/header-navigation.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-05-07 17:15+0000\n"
+"POT-Creation-Date: 2022-05-31 11:12+0000\n"
 "PO-Revision-Date: 2022-05-08 11:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -159,10 +159,21 @@ msgstr "<i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:53
-msgid "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
+#, fuzzy
+#| msgid "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
+msgid "<a href=\"https://quarkus.io/\" >OFFICIAL (ENGLISH)</a>"
 msgstr "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:54
-msgid "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
+#, fuzzy
+#| msgid "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
+msgid "<a href=\"https://ja.quarkus.io/\">日本語 - JAPANESE</a>"
+msgstr "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
+
+#. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
+#: upstream/_includes/header-navigation.html:55
+#, fuzzy
+#| msgid "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
+msgid "<a href=\"https://cn.quarkus.io/\">简体中文 - CHINESE</a>"
 msgstr "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
