--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -1,5 +1,5 @@
 Filename, Last modified, Upstream Last modified, Up to date
-l10n/override/ja_JP/_data/projectfooter.yaml, 2022-05-08 02:29:01 +0000, 2022-05-07 16:05:50 +0000, OK
+l10n/override/ja_JP/_data/projectfooter.yaml, 2022-05-08 02:29:01 +0000, 2022-05-31 08:30:14 +0000, NG
 l10n/override/ja_JP/blog.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_includes/recent-posts-band.html, 2022-03-05 04:28:28 +0000, 2022-03-02 16:30:22 +0000, OK
