Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.7/guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/vertx-reference.adoc.po
@@ -1945,7 +1945,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.7/guides/vertx-reference.adoc:1030
 msgid "These properties can be set through Java's `-D` command line parameter or on `application.properties`."
-msgstr ""
+msgstr "これらのプロパティは、Javaの `-D` コマンドライン・パラメータまたは `application.properties` で設定できます。"
 
 #. type: Title ==
 #: upstream/_versions/2.7/guides/vertx-reference.adoc:1031
