--- a/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
@@ -1268,7 +1268,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vertx.adoc:694
 msgid "These properties can be set through Java's `-D` command line parameter or on `application.properties`."
-msgstr ""
+msgstr "これらのプロパティは、Javaの `-D` コマンドライン・パラメータまたは `application.properties` で設定できます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/vertx.adoc:695
