--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-06-04 02:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,18 +53,32 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:17
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:26
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:20
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:29
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.workspace-discovery]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.workspace-discovery[quarkus.bootstrap.workspace-discovery]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If set to true, workspace discovery will be enabled for all launch modes. Usually, workspace discovery is enabled by default only for dev and test modes.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:34
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports[quarkus.bootstrap.misaligned-platform-imports]`\n"
@@ -76,13 +90,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:27
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:36
 #, no-wrap
 msgid "`error`, `warn`, `ignore`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:29
+#: upstream/_generated-config/main/config/quarkus-bootstrap-bootstrap-config.adoc:38
 #, no-wrap
 msgid "`error`"
 msgstr ""
