Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/includes/prerequisites.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/includes/prerequisites.adoc.po
@@ -19,17 +19,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:2
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:5
 msgid "Roughly {prerequisites-time}"
-msgstr ""
+msgstr "ざっと {prerequisites-time}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:8
 msgid "Roughly 15 minutes"
-msgstr ""
+msgstr "約15分"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:10
@@ -39,17 +39,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:12
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:14
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:17
 msgid "A working container runtime (Docker or Podman)"
-msgstr ""
+msgstr "動作するコンテナーランタイム(Docker, podman)"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:20
@@ -59,12 +59,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:23
 msgid "Optionally the xref:cli-tooling.adoc[Quarkus CLI] if you want to use it"
-msgstr ""
+msgstr "使用したい場合、 link:cli-tooling.html[Quarkus CLI]"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:27
 msgid "Optionally Mandrel or GraalVM installed and xref:building-native-image.adoc#configuring-graalvm[configured appropriately] if you want to build a native executable (or Docker if you use a native container build)"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルをビルドしたい場合、MandrelまたはGraalVM（あるいはネイティブなコンテナビルドを使用する場合はDocker）をインストールし、 link:building-native-image.html#configuring-graalvm[適切に設定]していること"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/includes/prerequisites.adoc:30
