--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-29 09:07+0000\n"
+"POT-Creation-Date: 2022-06-07 02:46+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -504,18 +504,36 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:294
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.additional-properties-additional-properties]]`link:#quarkus-datasource-data-sources-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive.additional-properties-additional-properties[quarkus.datasource.\"datasource-name\".reactive.additional-properties]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Other unspecified properties to be passed through the Reactive SQL Client directly to the database when new connections are initiated.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:295
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:292
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:301
 #, no-wrap
 msgid "About the Duration format"
 msgstr "期間フォーマットについて"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:296
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:305
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:300
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-build-time-config.adoc:309
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
