--- a/l10n/po/ja_JP/_versions/main/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-my-first-extension.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-16 02:31+0000\n"
+"POT-Creation-Date: 2022-06-07 02:40+0000\n"
 "PO-Revision-Date: 2021-05-12 13:34+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -771,7 +771,7 @@ msgid ""
 "        <plugins>\n"
 "            <plugin>\n"
 "                <groupId>io.quarkus</groupId>\n"
-"                <artifactId>quarkus-bootstrap-maven-plugin</artifactId>  <!--3-->\n"
+"                <artifactId>quarkus-extension-maven-plugin</artifactId>  <!--3-->\n"
 "                <version>${quarkus.version}</version>\n"
 "                <executions>\n"
 "                    <execution>\n"
@@ -816,7 +816,9 @@ msgstr "ランタイムモジュールは `quarkus-arc` アーティファクト
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:392
-msgid "We add the `quarkus-bootstrap-maven-plugin` to generate the Quarkus extension descriptor included into the runtime artifact which links it with the corresponding deployment artifact."
+#, fuzzy
+#| msgid "We add the `quarkus-bootstrap-maven-plugin` to generate the Quarkus extension descriptor included into the runtime artifact which links it with the corresponding deployment artifact."
+msgid "We add the `quarkus-extension-maven-plugin` to generate the Quarkus extension descriptor included into the runtime artifact which links it with the corresponding deployment artifact."
 msgstr "ランタイムアーティファクトに含まれる Quarkus 拡張記述子を生成するために `quarkus-bootstrap-maven-plugin` を追加し、これを対応するデプロイメントアーティファクトとリンクさせています。"
 
 #. type: Title ===
