--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-client.adoc.po
@@ -420,7 +420,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-client.adoc:239
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Block title
 #: upstream/_generated-config/main/config/quarkus-kubernetes-client.adoc:243
