--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -9,3 +9,4 @@ l10n/override/ja_JP/blog.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +000
 l10n/override/ja_JP/_guides/guides.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
 l10n/override/ja_JP/_includes/recent-posts-band.html, 2022-03-05 04:28:28 +0000, 2022-03-02 16:30:22 +0000, OK
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
+l10n/override/ja_JP/CNAME, 2022-06-08 19:18:03 +0000, 2019-03-07 11:48:18 +0000, OK
