--- a/l10n/po/ja_JP/_data/languages.yaml.po
+++ b/l10n/po/ja_JP/_data/languages.yaml.po
@@ -7,9 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-06-09 09:19+0900\n"
-"PO-Revision-Date: 2022-06-09 09:27+0900\n"
+"PO-Revision-Date: 2022-06-09 10:17+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,4 +19,4 @@ msgstr ""
 #. type: Hash Value: language headline
 #, no-wrap
 msgid "The <a href=\"https://quarkus.io\">English version of quarkus.io</a> is the official project site. Translated sites are community supported on a best-effort basis."
-msgstr "<ahref=\"https://quarkus.io\">英語版のquarkus.io</a>が公式のプロジェクトサイトです。 翻訳版は、ベストエフォートでコミュニティによってサポートされています。"
+msgstr "<a href=\"https://quarkus.io\">英語版のquarkus.io</a>が公式のプロジェクトサイトです。 翻訳版は、ベストエフォートでコミュニティによってサポートされています。"
