Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-01 02:56+0000\n"
+"POT-Creation-Date: 2022-06-11 02:41+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1540,8 +1540,9 @@ msgstr "`maven.settings`"
 
 #. type: Table
 #: upstream/_versions/main/guides/maven-tooling.adoc:899
-#, no-wrap
-msgid "`~/m2/settings.xml`"
+#, fuzzy, no-wrap
+#| msgid "`~/m2/settings.xml`"
+msgid "`~/.m2/settings.xml`"
 msgstr "`~/m2/settings.xml`"
 
 #. type: Table
@@ -1558,8 +1559,9 @@ msgstr "`maven.repo.local`"
 
 #. type: Table
 #: upstream/_versions/main/guides/maven-tooling.adoc:903
-#, no-wrap
-msgid "`~/m2/repository`"
+#, fuzzy, no-wrap
+#| msgid "`~/m2/repository`"
+msgid "`~/.m2/repository`"
 msgstr "`~/m2/repository`"
 
 #. type: Table
@@ -1623,7 +1625,7 @@ msgid ""
 "        <version>${surefire-plugin.version}</version>\n"
 "        <configuration>\n"
 "          <systemPropertyVariables>\n"
-"            <maven.home>${maven.hom}</maven.home> <1>\n"
+"            <maven.home>${maven.home}</maven.home> <1>\n"
 "            <maven.repo.local>${settings.localRepository}</maven.repo.local> <2>\n"
 "            <maven.settings>${session.request.userSettingsFile.path}</maven.settings> <3>\n"
 "            <maven.top-level-basedir>${session.topLevelProject.basedir.absolutePath}</maven.top-level-basedir> <4>\n"
