Apply translation memory

--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -3155,7 +3155,7 @@ msgstr ""
 #: upstream/_guides/kafka.adoc:1601
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1604
