--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -563,7 +563,7 @@ msgstr "import io.quarkus.test.junit.QuarkusTest;\n"
 #: upstream/_guides/rest-client-reactive.adoc:305
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:310
