--- a/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
@@ -552,7 +552,7 @@ msgstr "このアプリケーションは、ネイティブ実行可能ファイ
 #: upstream/_guides/vertx-reference.adoc:225
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:228
