--- a/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -237,7 +237,7 @@ msgstr "application.properties"
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:269
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: delimited block -
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:93
