--- a/l10n/po/ja_JP/_versions/1.11/guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/quartz.adoc.po
@@ -589,7 +589,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/quartz.adoc:274
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/quartz.adoc:277
