--- a/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vertx.adoc.po
@@ -1053,7 +1053,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vertx.adoc:573
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vertx.adoc:576
