--- a/l10n/po/ja_JP/_versions/2.2/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/native-and-ssl.adoc.po
@@ -328,7 +328,7 @@ msgstr "いずれも使用しておらず、とにかくSSLサポートを有効
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:115
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/native-and-ssl.adoc:118
