--- a/l10n/po/ja_JP/_versions/2.2/guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/scheduler.adoc.po
@@ -409,6 +409,8 @@ msgid ""
 "import static io.restassured.RestAssured.given;\n"
 "import static org.hamcrest.CoreMatchers.containsString;\n"
 msgstr ""
+"import static io.restassured.RestAssured.given;\n"
+"import static org.hamcrest.CoreMatchers.containsString;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/scheduler.adoc:190
