--- a/l10n/po/ja_JP/_versions/2.2/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/security-openid-connect-web-authentication.adoc.po
@@ -1554,7 +1554,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/security-openid-connect-web-authentication.adoc:795
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/security-openid-connect-web-authentication.adoc:800
