--- a/l10n/po/ja_JP/_versions/2.7/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/kafka.adoc.po
@@ -2888,7 +2888,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/kafka.adoc:1585
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/kafka.adoc:1588
