--- a/l10n/po/ja_JP/_versions/2.7/guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/rest-client-reactive.adoc.po
@@ -543,7 +543,7 @@ msgstr "import io.quarkus.test.junit.QuarkusTest;\n"
 #: upstream/_versions/2.7/guides/rest-client-reactive.adoc:308
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/rest-client-reactive.adoc:313
