--- a/l10n/po/ja_JP/_versions/2.7/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/security-openid-connect.adoc.po
@@ -1281,7 +1281,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/security-openid-connect.adoc:690
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/security-openid-connect.adoc:693
