--- a/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
@@ -337,7 +337,7 @@ msgstr "いずれも使用しておらず、とにかくSSLサポートを有効
 #: upstream/_versions/main/guides/native-and-ssl.adoc:120
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-and-ssl.adoc:123
