--- a/l10n/po/ja_JP/_versions/main/guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/quartz.adoc.po
@@ -562,7 +562,7 @@ msgstr ""
 #: upstream/_versions/main/guides/quartz.adoc:269
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/quartz.adoc:272
