--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -1203,7 +1203,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect.adoc:695
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect.adoc:649
