--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -406,6 +406,9 @@ msgid ""
 "    testImplementation 'io.rest-assured:rest-assured'\n"
 "}\n"
 msgstr ""
+"    testImplementation 'io.quarkus:quarkus-junit5'\n"
+"    testImplementation 'io.rest-assured:rest-assured'\n"
+"}\n"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:216
