--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -561,7 +561,7 @@ msgstr ""
 #: upstream/_guides/quartz.adoc:269
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:272
