--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -2327,7 +2327,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1162
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1167
