--- a/l10n/po/ja_JP/_versions/2.2/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/kotlin.adoc.po
@@ -424,6 +424,9 @@ msgid ""
 "    testImplementation 'io.rest-assured:rest-assured'\n"
 "}\n"
 msgstr ""
+"    testImplementation 'io.quarkus:quarkus-junit5'\n"
+"    testImplementation 'io.rest-assured:rest-assured'\n"
+"}\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/kotlin.adoc:219
