--- a/l10n/po/ja_JP/_versions/2.2/guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/vertx-reference.adoc.po
@@ -520,7 +520,7 @@ msgstr "このアプリケーションは、ネイティブ実行可能ファイ
 #: upstream/_versions/2.2/guides/vertx-reference.adoc:215
 #, no-wrap
 msgid "quarkus.ssl.native=true\n"
-msgstr ""
+msgstr "quarkus.ssl.native=true\n"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/vertx-reference.adoc:218
