--- a/l10n/po/ja_JP/_versions/2.7/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/redis.adoc.po
@@ -499,7 +499,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/redis.adoc:261
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/redis.adoc:263
