--- a/l10n/po/ja_JP/_versions/2.7/guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/rest-client-multipart.adoc.po
@@ -453,6 +453,8 @@ msgid ""
 "import static io.restassured.RestAssured.given;\n"
 "import static org.hamcrest.CoreMatchers.containsString;\n"
 msgstr ""
+"import static io.restassured.RestAssured.given;\n"
+"import static org.hamcrest.CoreMatchers.containsString;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/rest-client-multipart.adoc:238
