--- a/l10n/po/ja_JP/_versions/2.7/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/security-openid-connect-web-authentication.adoc.po
@@ -2108,7 +2108,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/security-openid-connect-web-authentication.adoc:1095
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/security-openid-connect-web-authentication.adoc:1100
