--- a/l10n/po/ja_JP/_versions/main/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/redis.adoc.po
@@ -501,7 +501,7 @@ msgstr ""
 #: upstream/_versions/main/guides/redis.adoc:260
 #, no-wrap
 msgid "import org.junit.jupiter.api.Test;\n"
-msgstr ""
+msgstr "import org.junit.jupiter.api.Test;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis.adoc:262
