--- a/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
@@ -463,6 +463,8 @@ msgid ""
 "import static io.restassured.RestAssured.given;\n"
 "import static org.hamcrest.CoreMatchers.containsString;\n"
 msgstr ""
+"import static io.restassured.RestAssured.given;\n"
+"import static org.hamcrest.CoreMatchers.containsString;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:247
