Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-19 02:28+0000\n"
+"POT-Creation-Date: 2022-06-14 02:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -418,7 +418,7 @@ msgstr "起動したら、提供されたエンドポイントにリクエスト
 #, no-wrap
 msgid ""
 "$ curl -w \"\\n\" http://localhost:8080/hello\n"
-"hello\n"
+"Hello from RESTEasy Reactive\n"
 msgstr ""
 
 #. type: Plain text
