--- a/l10n/stats/translation-sorted-by-fuzzy-words.csv
+++ b/l10n/stats/translation-sorted-by-fuzzy-words.csv
@@ -385,6 +385,7 @@ l10n/po/ja_JP/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc.po, 6, 18, 17,
 l10n/po/ja_JP/_posts/2020-10-09-quarkus-1-8-3-final-released.adoc.po, 6, 19, 15, 163 ,91%
 l10n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po, 3, 82, 8, 719 ,99%
 l10n/po/ja_JP/_posts/2020-11-10-mutiny-invoke-and-call.adoc.po, 1, 48, 2, 638 ,100%
+l10n/po/ja_JP/_posts/2022-06-13-quarkus-newsletter-21.adoc.po, 0, 11, 0, 245 ,100%
 l10n/po/ja_JP/_posts/2022-05-25-quarkus-2-9-2-final-released.adoc.po, 0, 18, 0, 155 ,100%
 l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po, 0, 61, 0, 663 ,100%
 l10n/po/ja_JP/_posts/2022-05-19-quinoa-modern-ui-with-no-hassle.adoc.po, 0, 39, 0, 866 ,100%
