Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-19 02:28+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -112,7 +112,7 @@ msgstr "JVMモードでのカスタムテスト構成プロファイル"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gradle-tooling.adoc:65
-msgid "By default, Quarkus tests in JVM mode are run using the `test` configuration profile. If you are not familiar with Quarkus configuration profiles, everything you need to know is explained in the xref:config.adoc#configuration-profiles[Configuration Profiles Documentation]."
+msgid "By default, Quarkus tests in JVM mode are run using the `test` configuration profile. If you are not familiar with Quarkus configuration profiles, everything you need to know is explained in the xref:config-reference.adoc#profiles[Configuration Profiles Documentation]."
 msgstr ""
 
 #. type: Plain text
