--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-17 02:51+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -968,7 +968,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm.adoc:501
-msgid "These approaches become really powerful when combined with Quarkus configuration profiles.  You can define different xref:config.adoc#configuration-profiles[configuration profiles] to select different behaviors depending on your environment.  This is great because you can define different combinations of Hibernate ORM properties matching the development style you currently need."
+msgid "These approaches become really powerful when combined with Quarkus configuration profiles.  You can define different xref:config-reference.adoc#profiles[configuration profiles] to select different behaviors depending on your environment.  This is great because you can define different combinations of Hibernate ORM properties matching the development style you currently need."
 msgstr ""
 
 #. type: Block title
