--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-06-02 02:53+0000\n"
+"POT-Creation-Date: 2022-06-16 03:01+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,7 +32,9 @@ msgstr "link:https://hibernate.org/reactive/[Hibernate Reactive]は、Hibernate 
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:20
-msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
+#, fuzzy
+#| msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
+msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
 msgstr "Hibernate Reactiveは、 link:quarkus-hibernate-orm.html[Hibernate ORMガイド]で説明されている同じアノテーションと、ほとんどの設定で動作します。このガイドでは、Hibernate Reactiveに特有のものにのみ焦点を当てます。"
 
 #. type: Title ==
