--- a/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-25 02:49+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -573,7 +573,9 @@ msgstr "link:https://github.com/open-telemetry/opentelemetry-specification/blob/
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/opentelemetry.adoc:327
-msgid "You can add attributes by setting the `resource-attributes` tracer config that is described in the <<configuration-reference>>.  Since this property can be overridden at runtime, the OpenTelemetry extension will pick up its value following the order of precedence that is described in the xref:config-reference.adoc#configuration_sources[Quarkus Configuration Reference]."
+#, fuzzy
+#| msgid "You can add attributes by setting the `resource-attributes` tracer config that is described in the <<configuration-reference>>.  Since this property can be overridden at runtime, the OpenTelemetry extension will pick up its value following the order of precedence that is described in the xref:config-reference.adoc#configuration_sources[Quarkus Configuration Reference]."
+msgid "You can add attributes by setting the `resource-attributes` tracer config that is described in the <<configuration-reference>>.  Since this property can be overridden at runtime, the OpenTelemetry extension will pick up its value following the order of precedence that is described in the xref:config-reference.adoc#configuration-sources[Quarkus Configuration Reference]."
 msgstr "link:#configuration-reference[設定リファレンス]に記載されている `resource-attributes` tracer configを設定することで、属性を追加することができます。このプロパティは実行時にオーバーライドすることができるため、OpenTelemetryエクステンションは、 link:config-reference.html#configuration_sources[Quarkus 設定リファレンス]に記載されている優先順位に従ってその値をピックアップします。"
 
 #. type: delimited block =
