--- a/l10n/po/ja_JP/_versions/main/guides/security-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-testing.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,9 @@ msgstr "セキュリティのテストには xref:security-properties.adoc[quark
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-testing.adoc:18
-msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using xref:config.adoc#configuration-profiles[Configuration Profiles]."
+#, fuzzy
+#| msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using xref:config.adoc#configuration-profiles[Configuration Profiles]."
+msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using xref:config-reference.adoc#profiles[Configuration Profiles]."
 msgstr "例えば、以下の設定では、 link:config.html#configuration-profiles[Configuration Profiles]を使って、OAuth2が必要な本番モードと開発モードの両方でユーザーを設定することができます。"
 
 #. type: delimited block -
@@ -189,7 +191,9 @@ msgstr "統合テストにWiremockを使用する"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-testing.adoc:109
-msgid "You can also use Wiremock to mock the authorization OAuth2 and OIDC services: See xref:security-oauth2#integration-testing.adoc[OAuth2 Integration testing], xref:security-openid-connect.adoc#integration-testing-wiremock[OpenID Connect Bearer Token Integration testing], xref:security-openid-connect-web-authentication.adoc#integration-testing-wiremock[OpenID Connect Authorization Code Flow Integration testing] and xref:security-jwt.adoc#integration-testing-wiremock[SmallRye JWT Integration testing] for more details."
+#, fuzzy
+#| msgid "You can also use Wiremock to mock the authorization OAuth2 and OIDC services: See xref:security-oauth2#integration-testing.adoc[OAuth2 Integration testing], xref:security-openid-connect.adoc#integration-testing-wiremock[OpenID Connect Bearer Token Integration testing], xref:security-openid-connect-web-authentication.adoc#integration-testing-wiremock[OpenID Connect Authorization Code Flow Integration testing] and xref:security-jwt.adoc#integration-testing-wiremock[SmallRye JWT Integration testing] for more details."
+msgid "You can also use Wiremock to mock the authorization OAuth2 and OIDC services: See xref:security-oauth2.adoc#integration-testing[OAuth2 Integration testing], xref:security-openid-connect.adoc#integration-testing-wiremock[OpenID Connect Bearer Token Integration testing], xref:security-openid-connect-web-authentication.adoc#integration-testing-wiremock[OpenID Connect Authorization Code Flow Integration testing] and xref:security-jwt.adoc#integration-testing-wiremock[SmallRye JWT Integration testing] for more details."
 msgstr "また、Wiremockを使って認可用のOAuth2やOIDCサービスをモックすることもできます。詳細は、 link:security-oauth2.html#integration-testing.adoc[OAuth2 Integration testing]、 link:security-openid-connect.html#integration-testing-wiremock[OpenID Connect Bearer Token Integration testing]、 link:security-openid-connect-web-authentication.html#integration-testing-wiremock[OpenID Connect Authorization Code Flow Integration testing]、 link:security-jwt.html#integration-testing-wiremock[SmallRye JWT Integration testing]を参照してください。"
 
 #. type: Title ==
