--- a/l10n/po/ja_JP/_versions/main/guides/config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-15 02:30+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -272,7 +272,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:132
-msgid "Use `@io.smallrye.config.ConfigMapping` annotation to group multiple configurations in a single interface. Please, check the https://smallrye.io/docs/smallrye-config/main/mapping/mapping.html[Config Mappings] documentation."
+#, fuzzy
+#| msgid "Use `@io.smallrye.config.ConfigMapping` annotation to group multiple configurations in a single interface. Please, check the https://smallrye.io/docs/smallrye-config/main/mapping/mapping.html[Config Mappings] documentation."
+msgid "Use `@io.smallrye.config.ConfigMapping` annotation to group multiple configurations in a single interface. Please, check the https://smallrye.io/smallrye-config/latest/config/mappings/[Config Mappings] documentation."
 msgstr "`@io.smallrye.config.ConfigMapping` アノテーションを使用して、複数の設定を1つのインターフェイスにまとめます。 link:https://smallrye.io/docs/smallrye-config/main/mapping/mapping.html[Config Mappings]のドキュメントを参照してください。"
 
 #. type: Title ==
@@ -521,7 +523,9 @@ msgstr "シークレットを隠す"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:243
-msgid "For more information, please check the link:https://smallrye.io/docs/smallrye-config/index.html[SmallRye Config documentation]."
+#, fuzzy
+#| msgid "For more information, please check the link:https://smallrye.io/docs/smallrye-config/index.html[SmallRye Config documentation]."
+msgid "For more information, please check the link:https://smallrye.io/smallrye-config/latest/[SmallRye Config documentation]."
 msgstr "詳細は、link:https://smallrye.io/docs/smallrye-config/index.html[SmallRye Config のドキュメント] を参照してください。"
 
 #~ msgid "To complete this guide, you need:"
