--- a/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-06-04 02:36+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -359,7 +359,9 @@ msgstr "quarkus.container-image.image=${CI_REGISTRY_IMAGE}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:200
-msgid "See xref:config.adoc#combine-property-env-var[this] for more information on how to combine properties with environment variables."
+#, fuzzy
+#| msgid "See xref:config.adoc#combine-property-env-var[this] for more information on how to combine properties with environment variables."
+msgid "See xref:config-reference.adoc#with-environment-variables[this] for more information on how to combine properties with environment variables."
 msgstr "プロパティと環境変数を組み合わせる方法については、 link:config.html#combine-property-env-var[こちら]をご覧ください。"
 
 #. type: Title ===
