--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-25 02:49+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1419,7 +1419,7 @@ msgstr "Keycloak"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client-reference.adoc:777
-msgid "If you work with Keycloak then you can use the same approach as described in the xref:security-openid-connect#integration-testing-keycloak.adoc[OpenID Connect Bearer Token Integration testing] Keycloak section."
+msgid "If you work with Keycloak then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing-keycloak[OpenID Connect Bearer Token Integration testing] Keycloak section."
 msgstr ""
 
 #. type: Title ===
