--- a/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-25 02:49+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -623,7 +623,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security.adoc:256
-msgid "See the xref:http-reference#adoc[Supporting secure connections with SSL] guide for more information."
+msgid "See the xref:http-reference.adoc#ssl[Supporting secure connections with SSL] guide for more information."
 msgstr ""
 
 #. type: Title ==
