--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-06-07 02:40+0000\n"
+"POT-Creation-Date: 2022-06-16 03:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -207,7 +207,9 @@ msgstr "クラスに裏付けられたBean"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:96
-msgid "An extension can produce an <<cdi-reference.adoc#additional_beans,`AdditionalBeanBuildItem`>> to instruct the container to read a bean definition from a class as if it was part of the original application:"
+#, fuzzy
+#| msgid "An extension can produce an <<cdi-reference.adoc#additional_beans,`AdditionalBeanBuildItem`>> to instruct the container to read a bean definition from a class as if it was part of the original application:"
+msgid "An extension can produce an xref:cdi-integration.adoc#additional_bean_build_item[`AdditionalBeanBuildItem`] to instruct the container to read a bean definition from a class as if it was part of the original application:"
 msgstr "エクステンションは link:cdi-reference.html#additional_beans[`AdditionalBeanBuildItem`] コンテナに、元のアプリケーションの一部であるかのようにクラスからBeanの定義を読み込むように指示します。"
 
 #. type: Block title
