Apply translation memory

--- a/l10n/po/ja_JP/_guides/jreleaser.adoc.po
+++ b/l10n/po/ja_JP/_guides/jreleaser.adoc.po
@@ -115,7 +115,7 @@ msgstr "また、作成したリポジトリにリリースを投稿するため
 #: upstream/_guides/jreleaser.adoc:80
 #, no-wrap
 msgid "~/.jreleaser/config.yml"
-msgstr ""
+msgstr "~/.jreleaser/config.yml"
 
 #. type: delimited block -
 #: upstream/_guides/jreleaser.adoc:83
