--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -2386,7 +2386,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1177
 msgid "An example where a custom module needs to be registered would look like so:"
-msgstr ""
+msgstr "カスタムモジュールを登録する必要がある場合の例は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1182
